--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014.11.18, Version 0.0.4
+
+* test opts.maxBytes type checking
+* readme: simpler example
+
+
 2014.11.14, Version 0.0.3
 
 * support maxBytes option
