--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015.01.09, Version 0.0.5
+
+* update license from MIT to ISC
+* document and test Buffer values in objects
+
+
 2014.11.18, Version 0.0.4
 
 * test opts.maxBytes type checking
