--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015.12.24, Version 0.0.7
+
+* make compatible with browserify
+
+
 2015.08.31, Version 0.0.6
 
 * fix compatibility with bson 0.x (namely 0.4.x)
