--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015.12.29, Version 0.0.8
+
+* fix use of browserify with bson npm module
+
+
 2015.12.24, Version 0.0.7
 
 * make compatible with browserify
