--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020.10.23, Version 1.0.0
+
+* update bson dependency from ^0.4.20 to ^4.2.0
+
+
 2015.12.29, Version 0.0.8
 
 * fix use of browserify with bson npm module
